objects/Service_Request_Field_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Type__c</fullName>
        <inlineHelpText>If a conversion is required, enter the conversion type here that matches apex conversion mapping.  &quot;Boolean&quot; = convert yes/no text to Bool.</inlineHelpText>
        <label>Conversion Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Group</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Category__c</fullName>
        <label>Service Request Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Result__c</fullName>
        <label>Service Result</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Old__c</fullName>
        <description>target sObject&apos;s destination, if any, for original values of fields that have been marked as changed.</description>
        <label>Target Field Old</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Service Request Field Map</label>
</CustomObject>